--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title>Aaron Snauwaert - HTML5 Boilerplate</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" size="32x32" href="/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" size="16x16" href="/img/favicon-16x16.png">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
         <header>
@@ -18,9 +22,18 @@
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="test.com">standard link</a> distinctio facilis excepturi, reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis quasi sed, facere quo nobis a blanditiis.
         </p>
+        <figure>
+            <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
+            <figcaption>Yawning cat. Photo by Martina Miar</figcaption>
+        </figure>
         <h3>
-            Heading 3
+            Styling lists is easy
         </h3>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, sequi?</li>
+            <li>Dolor assumenda incidunt accusantium natus nam fugiat? Tenetur, iusto incidunt?</li>
+            <li>Officia assumenda soluta nostrum? Atque facilis unde debitis ut nemo.</li>
+        </ul>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="https://www.google.com">visited link</a> hic nemo dicta dignissimos dolorum obcaecati nobis tenetur laudantium iusto quibusdam vero velit magnam quam quas! Iure nobis minima accusamus fuga.
         </p>
@@ -35,6 +48,40 @@
         <p>
             Add an unorderd list with 3 list items here
         </p>
+        <h2>Table</h2>
+        <table>
+            <tr>
+                <th>Country</th>
+                <th>Capital</th>
+                <th>Population</th>
+                <th>Language</th>
+            </tr>
+            <tr>
+                <td>USA</td>
+                <td>Washington</td>
+                <td>309 Mil</td>
+                <td>English</td>
+            </tr>
+            <tr>
+                <td>Sweden</td>
+                <td>Stochholm</td>
+                <td>9 Mil</td>
+                <td>Swedish</td>
+            </tr>
+            <tr>
+                <td>France</td>
+                <td>Paris</td>
+                <td>10 Mil</td>
+                <td>French</td>
+            </tr>
+            <tr>
+                <td>Germany</td>
+                <td>Berlin</td>
+                <td>9Mil</td>
+                <td>German</td>
+            </tr>
+        </table>
+
         <hr>
         <footer>
             <p>By <strong>Your name</strong></p>
