--- a/index.html
+++ b/index.html
@@ -16,9 +16,20 @@
             <h1>Hello world! This is my HTML5 boilerplate.</h1>
             <p>A Boilerplate helps you build fast, robust, and adaptable web apps or sites. Kick-start your project with the combined knowledge and effort of 100s of developers, all in one little package.</p>
         </header>
-        <h2>
-            Heading 2
+        <h2 id="hoofding2">
+            Heading2:
         </h2>
+
+        <nav>
+            <ul>
+            <li><a href="#hoofding2">Heading 2</a></li>
+            <li><a href="#hoofding2">Heading 3</a></li>
+            <li><a href="#hoofding2">Lists</a></li>
+            <li><a href="#hoofding2">Table</a></li>
+            </ul>
+        </nav>
+
+
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="test.com">standard link</a> distinctio facilis excepturi, reprehenderit pariatur odit, velit mollitia saepe impedit reiciendis omnis quasi sed, facere quo nobis a blanditiis.
         </p>
@@ -26,6 +37,13 @@
             <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat">
             <figcaption>Yawning cat. Photo by Martina Miar</figcaption>
         </figure>
+        <h3 id="hoofding3">
+            Heading 3
+        </h3>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="https://www.google.com">visited link</a> hic nemo dicta dignissimos dolorum obcaecati nobis tenetur laudantium iusto quibusdam vero velit magnam quam quas! Iure nobis minima accusamus fuga.
+        </p>
+
         <h3>
             Styling lists is easy
         </h3>
@@ -34,9 +52,7 @@
             <li>Dolor assumenda incidunt accusantium natus nam fugiat? Tenetur, iusto incidunt?</li>
             <li>Officia assumenda soluta nostrum? Atque facilis unde debitis ut nemo.</li>
         </ul>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="https://www.google.com">visited link</a> hic nemo dicta dignissimos dolorum obcaecati nobis tenetur laudantium iusto quibusdam vero velit magnam quam quas! Iure nobis minima accusamus fuga.
-        </p>
+
         <blockquote cite="http://www.htmldog.com/reference/htmltags/blockquote/">
             <p>
                 A blockquote is a large quotation. The content of a blockquote element must include block-level elements such as headings, lists, paragraphs or div’s. This element can also have an optional attribute cite that specifies the location (in the form of a URI) where the quote has come from.
@@ -56,7 +72,7 @@
                 <th>Population</th>
                 <th>Language</th>
             </tr>
-            <tr>
+            <tr class="odd">
                 <td>USA</td>
                 <td>Washington</td>
                 <td>309 Mil</td>
@@ -68,7 +84,7 @@
                 <td>9 Mil</td>
                 <td>Swedish</td>
             </tr>
-            <tr>
+            <tr class="odd">
                 <td>France</td>
                 <td>Paris</td>
                 <td>10 Mil</td>
